--- a/asdasd/home.html
+++ b/asdasd/home.html
@@ -491,25 +491,9 @@
 
     <section class="project" id="project">
         <div class="mid-text">
-            <h2><i class="bi bi-folder" style="color: #b68362;"></i>  My <span>Projects</span></h2>
+            <h2><i class="bi bi-folder" style="color: #b68362;"></i>  My <span>Projects></span></h2>
         </div>
         <div class="project-content">
-            <div class="row">
-                <div class="row-img">
-                    <a href="pic/Bajaj.pdf">
-                    <img src="pic/A01.png" alt="">
-                </a>
-                </div>
-
-                <div class="row-in">
-                    <div class="row-left">
-                        <h3>Bajaj Maxima</h3>
-                    </div>
-                    <div class="row-right">
-                        <a href="pic/Bajaj.pdf"><i class="bi bi-link"></i></a>
-                    </div>
-                </div>
-            </div>
             <div class="row">
                 <div class="row-img">
                     <a href="Everest/index.html">
@@ -519,10 +503,26 @@
 
                 <div class="row-in">
                     <div class="row-left">
-                        <h3>Above the Clouds</h3>
+                        <h3>Above The Clouds</h3>
                     </div>
                     <div class="row-right">
                         <a href="Everest/index.html"><i class="bi bi-link"></i></a>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="row-img">
+                    <a href="Digimon/index.html">
+                    <img src="digimon.png" alt="">
+                </a>
+                </div>
+
+                <div class="row-in">
+                    <div class="row-left">
+                        <h3>Digimon</h3>
+                    </div>
+                    <div class="row-right">
+                        <a href="Digimon/index.html"><i class="bi bi-link"></i></a>
                     </div>
                 </div>
             </div>
