--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio</title>
+    <link rel="icon" href="pic/jm.png" type="image/png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link
@@ -513,7 +514,7 @@
             <div class="row">
                 <div class="row-img">
                     <a href="Everest/index.html">
-                    <img src="home.png" alt="">
+                    <img src="pic/home.png" alt="">
                 </a>
                 </div>
 
@@ -528,49 +529,49 @@
             </div>
             <div class="row">
                 <div class="row-img">
-                    <a href="Everest/index.html">
-                    <img src="home.png" alt="">
+                    <a href="Digimon/index.html">
+                    <img src="pic/digimon.png" alt="">
                 </a>
                 </div>
 
                 <div class="row-in">
                     <div class="row-left">
-                        <h3>Above The Clouds</h3>
+                        <h3>Digimon</h3>
                     </div>
                     <div class="row-right">
-                        <a href="Everest/index.html"><i class="bi bi-link"></i></a>
+                        <a href="Digimon/index.html"><i class="bi bi-link"></i></a>
                     </div>
                 </div>
             </div>
             <div class="row">
                 <div class="row-img">
-                    <a href="Everest/index.html">
-                    <img src="home.png" alt="">
+                    <a href="embed.html">
+                    <img src="pic/embed.png" alt="">
                 </a>
                 </div>
 
                 <div class="row-in">
                     <div class="row-left">
-                        <h3>Above The Cloudes</h3>
+                        <h3>Gaming Phone Review</h3>
                     </div>
                     <div class="row-right">
-                        <a href="Everest/index.html"><i class="bi bi-link"></i></a>
+                        <a href="embed.html"><i class="bi bi-link"></i></a>
                     </div>
                 </div>
             </div>
             <div class="row">
                 <div class="row-img">
-                    <a href="Everest/index.html">
-                    <img src="home.png" alt="">
+                    <a href="404.html">
+                    <img src="pic/error.png" alt="">
                 </a>
                 </div>
 
                 <div class="row-in">
                     <div class="row-left">
-                        <h3>Above The Cloudes</h3>
+                        <h3>404 - Website Error</h3>
                     </div>
                     <div class="row-right">
-                        <a href="Everest/index.html"><i class="bi bi-link"></i></a>
+                        <a href="404.html"><i class="bi bi-link"></i></a>
                     </div>
                 </div>
             </div>
@@ -599,7 +600,7 @@
                         <a href="https://www.instagram.com/jeyem.1000/"><i class="bi bi-instagram"></i></a>
                         <a href="https://x.com/jeyemaustria?t=8kOR_Y7VoCCbAh9TQtx9kQ&s=09"><i
                                 class="bi bi-twitter-x"></i></a>
-                        <a href="https://github.com/JM-Austria"><i class="bi bi-github"></i></a>
+                        <a href="https://github.com/jmAustria0"><i class="bi bi-github"></i></a>
                     </div>
                 </div>
 
