--- a/index.html
+++ b/index.html
@@ -545,8 +545,8 @@
             </div>
             <div class="row">
                 <div class="row-img">
-                    <a href="embed.html">
-                    <img src="pic/embed.png" alt="">
+                    <a href="U4/embed.html">
+                    <img src="U4/pic/embed.png" alt="">
                 </a>
                 </div>
 
@@ -555,7 +555,7 @@
                         <h3>Gaming Phone Review</h3>
                     </div>
                     <div class="row-right">
-                        <a href="embed.html"><i class="bi bi-link"></i></a>
+                        <a href="U4/embed.html"><i class="bi bi-link"></i></a>
                     </div>
                 </div>
             </div>
