--- a/index.html
+++ b/index.html
@@ -465,8 +465,8 @@
                 <div class="col-lg-6">
                     <ul>
                         <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>22</span></li>
-                        <li><i class="bi bi-chevron-right"></i> <strong>Course & Year level:</strong> <span>BSIT 4th
-                                yr</span></li>
+                        <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Bachelor of Science in Information Technology
+                                </span></li>
                         <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong>
                             <span>AustriaJm10@gmail.com</span>
                         </li>
