--- a/index.html
+++ b/index.html
@@ -578,7 +578,7 @@
         <a href="#contact" class="btn">Contact Me</a>
     </div>
     <div class="home-img">
-        <img src="pic/pic.png" alt="John Michael Austria">
+        <img src="pic/picc.JPG" alt="John Michael Austria">
     </div>
 </section>
 
